# projeto-final-caio-rondow

./: .gitignore  CMakeLists.txt  README.md  TODO.docx
Assets/Level/: example.csv
Assets/Level/End/: example0.csv
Assets/Level/Start/: example0.csv
Assets/Sprite/NodeDebug/: DebugSpriteSheet.json
Assets/Sprite/Preview/b/: b-wireframe.json
Assets/Sprite/Table/: table.json
Source/: Main.cpp
Source/Actors/: Actor.cpp  Actor.h  Block.cpp  Block.h  Cursor.cpp  Cursor.h  Peg.cpp  Peg.h  Piece.cpp  Piece.h  Preview.cpp  Preview.h  Table.cpp  Table.h  Wall.cpp  Wall.h
Source/Components/: Component.cpp  Component.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawPolygonComponent.cpp  DrawPolygonComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h  DrawTextComponent.cpp  DrawTextComponent.h
Source/Game/: ConcreteGame.cpp  ConcreteGame.h  InterfaceGame.h
Source/Scenes/: Scene.cpp  Scene.h
Source/Utils/: AudioSystem.cpp  AudioSystem.h  Font.cpp  Font.h  Math.cpp  Math.h  Parser.h
